Fix navbar layout issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -33,6 +33,14 @@ body {
 
 }
 
+@media screen and (max-width: 575px) {
+
+  .navbar-brand img {
+    margin-left: 1rem;
+  }
+
+}
+
 .navbar-collapse {
   text-align: right;
   padding-right: 0.8em;
